--- a/AutoCoevoRUL/build.gradle
+++ b/AutoCoevoRUL/build.gradle
@@ -17,8 +17,8 @@ dependencies {
     	exclude group: 'mysql', module: 'mysql-connector-java'
     	}
     implementation('com.github.mwever:moeaframework:e6f6b1a007')
-    
-    compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.25'
+
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.32'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
     compile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
     
@@ -62,7 +62,7 @@ targetCompatibility = 1.11
 
 task buildCoevolution(type: Jar) {
     manifest {
- 		attributes 'Main-Class': 'autocoevorul.experiment.AutoCoevolutionRunner'
+ 		attributes 'Main-Class': 'autocoevorul.AutoCoevolutionRunner'
     }
     zip64 = true
     baseName = 'Coevolution'
